package com.iting.jobportal.notification.enums;

/**
 * Type of notification recipient
 */
public enum RecipientType {
    /**
     * Notification for a user (candidate)
     */
    USER,

    /**
     * Notification for a company (recruiter)
     */
    COMPANY,

    /**
     * Notification for an admin
     */
    ADMIN
}
