@startuml 06 - Class Diagram: Messaging & Notification Module

skinparam classBackgroundColor #EEF2FF
skinparam classBorderColor #6366F1
skinparam classArrowColor #374151
skinparam roundcorner 10
skinparam classFontSize 11

title Class Diagram: Messaging & Notification Module

package "com.iting.jobportal.messaging" {

  enum SenderType {
    USER
    COMPANY
  }

  enum ReceiverType {
    USER
    COMPANY
  }

  enum ConversationType {
    USER_TO_USER
    USER_TO_COMPANY
  }

  class Conversation {
    - id: Long
    - type: ConversationType
    - participant1Id: Long
    - participant2Id: Long
    - lastMessageId: Long
    - lastMessageContent: String
    - lastMessageTime: LocalDateTime
    - createdAt: LocalDateTime
    - updatedAt: LocalDateTime
    ' transient fields (from enrichment)
    + participant1Name: String
    + participant1Avatar: String
    + participant2Name: String
    + participant2Avatar: String
    + unreadCount: Integer
  }

  class Message {
    - id: Long
    - conversationId: Long
    - senderId: Long
    - senderType: SenderType
    - receiverId: Long
    - receiverType: ReceiverType
    - content: String
    - isRead: Boolean
    - readAt: LocalDateTime
    - createdAt: LocalDateTime
  }

  interface MessageService {
    + sendMessage(request: SendMessageRequest, senderId: Long): MessageResponse
    + getMessagesByConversation(conversationId: Long, page: int, size: int): Page<MessageResponse>
    + getAllMessagesByConversation(conversationId: Long): List<MessageResponse>
    + markMessageAsRead(messageId: Long, userId: Long): void
    + markAllMessagesAsReadInConversation(conversationId: Long, userId: Long): void
    + getUnreadMessageCount(userId: Long): Long
    + deleteMessage(messageId: Long, userId: Long): void
  }

  interface ConversationService {
    + getConversationsForUser(userId: Long, page: int, size: int): ConversationListResponse
    + getConversationById(conversationId: Long, userId: Long): ConversationResponse
    + getConversationBetweenParticipants(userId1: Long, userId2: Long): ConversationResponse
    + getUnreadCountForConversation(conversationId: Long, userId: Long): Long
    + deleteConversation(conversationId: Long, userId: Long): void
  }

  class MessageServiceImpl {
    - messageRepository: MessageRepository
    - conversationRepository: ConversationRepository
    - domainNotificationPublisher: DomainNotificationPublisher
  }

  class ConversationServiceImpl {
    - conversationRepository: ConversationRepository
    - messageRepository: MessageRepository
    - userRepository: UserRepository
    - companyRepository: CompanyRepository
  }

  class MessageController {
    - messageService: MessageService
    - conversationService: ConversationService
    + sendMessage(request: SendMessageRequest, senderId: Long): ResponseEntity
    + getConversations(userId: Long, page: int, size: int): ResponseEntity
    + getMessages(conversationId: Long, page: int, size: int): ResponseEntity
    + markAsRead(conversationId: Long, userId: Long): ResponseEntity
  }

  class DomainNotificationPublisher {
    - notificationService: NotificationService
    - webSocketNotificationService: WebSocketNotificationService
    + publishDomainEvent(event: DomainEvent): void
  }
}

package "com.iting.jobportal.notification" {

  enum RecipientType {
    CANDIDATE
    EMPLOYER
    ADMIN
  }

  enum NotificationType {
    APPLICATION_STATUS_CHANGED
    MESSAGE_RECEIVED
    JOB_POSTED
    JOB_APPROVED
    JOB_REJECTED
    COMPANY_VERIFIED
    AFFILIATION_APPROVED
    AFFILIATION_REJECTED
    NEW_APPLICATION_RECEIVED
    FOLLOW_COMPANY
  }

  class Notification {
    - id: Integer
    - content: String
    - time: LocalDateTime
    - recipientId: Long
    - recipientType: RecipientType
    - type: NotificationType
    - isRead: Boolean
    - readAt: LocalDateTime
    - entityType: String
    - entityId: Long
    - actionUrl: String
  }

  interface NotificationService {
    + saveNotification(notification: Notification): Notification
    + getNotificationsForUser(userId: Long, page: int, size: int): Page<Notification>
    + markAsRead(notificationId: Integer): void
    + markAllAsRead(userId: Long): void
    + getUnreadCount(userId: Long): Long
  }

  class WebSocketNotificationService {
    - messagingTemplate: SimpMessagingTemplate
    + pushToUser(userId: Long, notification: Notification): void
    + pushBulkNotifications(userIds: List<Long>, notification: Notification): void
  }
}

' Relationships
Conversation "1" *-- "many" Message : contains >
MessageServiceImpl ..|> MessageService : implements
ConversationServiceImpl ..|> ConversationService : implements
MessageController --> MessageService : uses
MessageController --> ConversationService : uses
MessageServiceImpl --> DomainNotificationPublisher : uses
DomainNotificationPublisher --> NotificationService : uses
DomainNotificationPublisher --> WebSocketNotificationService : uses

note right of Message
  Không có JPA @ManyToOne
  → lưu conversationId dạng Long
  để tránh N+1 query
end note

note right of WebSocketNotificationService
  Dùng STOMP over WebSocket
  Topic: /user/{id}/queue/notifications
  Topic: /user/{id}/queue/messages
end note

@enduml
